--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.data filter=lfs diff=lfs merge=lfs -text
 *.wasm filter=lfs diff=lfs merge=lfs -text
+*.unityweb filter=lfs diff=lfs merge=lfs -text
